# Smarter-Lock

./: .gitignore  CertificateSigningRequest.certSigningRequest  Smarter_Lock_Profile.mobileprovision  TestGPIO.cpp  TestServer.js  apnserver_public.pem  aps_cert.pem  aps_development.cer  aps_key.pem  private.pem  rpi
Common/: GPIO.cpp  GPIO.h  Packet.h  PacketAssembler.cpp  PacketAssembler.h  RSAHelper.inl  SimplePacket.cpp  SimplePacket.h  StringHex.inl  TCPServer.cpp  TCPServer.h  ThreadPool.cpp  ThreadPool.h  UDPCommunicator.cpp  UDPCommunicator.h  VideoFramePacket.cpp  VideoFramePacket.h
Common/Packets/: CMakeLists.txt  CommandPacket.cpp  Packet.h  PacketAssembler.cpp  PacketAssembler.h  PasscodePacket.cpp  PasscodePacket.h  SimplePacket.cpp  VideoFramePacket.h  buildlib
Packet/: CommandPacket.h  PacketAssembler.h  PasscodePacket.cpp
Server/: .gitignore  APNClient.cpp  APNClient.h  BluetoothThread.cpp  BluetoothThread.h  CMakeLists.txt  CameraLoop.cpp  CameraLoop.h  Helpers.cpp  Helpers.h  REPL.cpp  REPL.h  ServerThreads.cpp  ServerThreads.h  ZxingBridge.cpp  ZxingBridge.h  build_server  config_default.ini  config_pi.ini  main.cpp  osxrun  piserver  public.pem
Smarter Lock/: AppDelegate.m  Authenticator.h  Authenticator.m  Communicator.h  Communicator.m  Communicator.mm  FirstViewController.h  FirstViewController.m  Info.plist  MonitorController.h  MonitorController.mm  PacketAssembler.cpp  PasscodePayload.h  PasscodePayload.m  Payload.h  SecondViewController.h  SecondViewController.m  SecondViewController.mm  SettingsController.h  SettingsController.mm  TestServer.js  UnlockPayload.h  UnlockPayload.m  main.m
Smarter Lock iOS/: AppDelegate.h  AppDelegate.mm  Authenticator.m  Communicator.h  Communicator.mm  FirstViewController.h  FirstViewController.mm  Info.plist  MonitorController.h  MonitorController.mm  SecondViewController.h  SecondViewController.mm  SettingsController.h  SettingsController.mm
Smarter Lock iOS/Base.lproj/: LaunchScreen.xib  Main.storyboard
Smarter Lock iOS/Images.xcassets/AppIcon.appiconset/: Contents.json
Smarter Lock iOS/Images.xcassets/Bullet Camera-50.imageset/: Contents.json
Smarter Lock iOS/Images.xcassets/Speedometer-50.imageset/: Contents.json
Smarter Lock.xcodeproj/: project.pbxproj
Smarter Lock.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Smarter Lock.xcodeproj/xcuserdata/yuwei.xcuserdatad/xcschemes/: Smarter Lock.xcscheme  xcschememanagement.plist
Smarter Lock/Base.lproj/: Main.storyboard
Smarter Lock/Packet/: CommandPacket.cpp  IntPacket.cpp  IntPacket.h  Packet.h  PacketAssembler.cpp  PacketAssembler.h  PasscodePacket.cpp  PasscodePacket.h
Smarter Lock/Payload/: PacketAssembler.h  PasscodePayload.cpp  PasscodePayload.h  UnlockPayload.cpp
Smarter LockTests/: CommunicatorTest.m  CommunicatorTest.mm  Info.plist  Smarter_LockTests.m  ZxingBridgeTest.mm
Test Server/: CMakeLists.txt  Helpers.cpp  Helpers.h  ServerThreads.cpp  ServerThreads.h  TestGPIO.cpp  main.cpp
apns/: .gitignore  apns.js  apnserver_private.pem  build_server  glue.js  notify.js  package.json  server.js  test_sender.js
apns/cppglue/: CMakeLists.txt  buildlib  glue.cpp  glue.h  glue_test.cpp
certs/: aps_key.p12
gui/: controller.py  info.txt  main.py  ui.ui  ui4.py  ui5.py
openssl-includes/openssl/: opensslconf.h
zxing/: CMakeLists.txt  buildlib
